<resources>
    <string name="app_name">Leaves</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_leaves">Number of leaves:</string>
    <string name="sick">Sick</string>
    <string name="paid">Paid</string>
    <string name="leave_taken_date">Leave taken date</string>
    <string name="select">Select</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="save">Save</string>
    <string name="enter_the_number_of_total_sick_leave">Sick Leaves(Optional)</string>
    <string name="enter_the_number_of_total_paid_leave">Paid Leaves</string>
    <string name="paid_leaves">(Paid) Leaves</string>
    <string name="sick_leaves">Sick Leaves</string>
</resources>
