<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditLeaveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number_of_leave_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="1dp"
            android:text="@string/number_of_leaves"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/leave_selector_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="50"
            android:padding="2dp"
            android:progress="1"
            android:progressTint="@color/black"
            android:thumbTint="@color/black" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/leave_type_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/paid_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/paid" />

        <RadioButton
            android:id="@+id/sick_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/sick" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="1dp"
            android:text="@string/leave_taken_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/select_date_for_leave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/select"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/description"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/text_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@null"
        android:hint="@string/enter_description_here"
        android:padding="5dp" />


</LinearLayout>